<resources>
    <string name="app_name">ChatApp</string>
    <string name="btn_1">Button 1</string>
    <string name="img_1">Image_!</string>
    <string name="edit_text">Your feedback</string>
    <string name="quest_1">How was the service?</string>
    <string name="amz_text_1">Amazing</string>
    <string name="amz_text_2">Good</string>
    <string name="amz_text_3">Perfect</string>
    <string name="amz_val">20%</string>
    <string name="rg_email">Register with email</string>
    <string name="ac_btn">Send</string>
    <string name="field_mail">Email</string>
    <string name="rs_field">Percent: %s</string>
    <string name="aff_1">I am strong.</string>
    <string name="aff_2">I believe in myself.</string>
    <string name="aff_3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="aff_4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="aff_5">I have so much to be grateful for.</string>
    <string name="aff_6">Good things are always coming into my life.</string>
    <string name="aff_7"> New opportunities await me at every turn.</string>
    <string name="aff_8">I have the courage to follow my heart.</string>
    <string name="aff_9">Things will unfold at precisely the right time.</string>
    <string name="aff_10">I will be present in all the moments that this day brings.</string>
</resources>